2009-07-06  Manuel Cerón  <ceronman@gmail.com>

	* Demo.csproj: Project Updated

2009-06-10  Manuel Cerón  <ceronman@gmail.com>

	* Demo.csproj:
	* MainWindow.cs: Added Action callbacks

2009-06-10  Manuel Cerón  <ceronman@gmail.com>

	* gtk-gui:
	* Main.cs:
	* Demo.csproj:
	* MainWindow.cs:
	* AssemblyInfo.cs: Added Demo Project
