@@ -1,3 +1,9 @@
+2009-07-27  Manuel Cerón  <ceronman@gmail.com>
+
+	* IConnectionFigure.cs: Added ConnectionChangedEvent
+
+	* LineConnection.cs: added ConnectionChanged Event
+
 2009-07-10  Manuel Cerón  <ceronman@gmail.com>
 
 	* StackFigure.cs: Removed unnecesary UpdatePositions
