@@ -1,3 +1,8 @@
+2009-07-27  Manuel Cerón  <ceronman@gmail.com>
+
+	* MainWindow.cs: Added simple demo of the new
+	ConnectionChanged event
+
 2009-07-06  Manuel Cerón  <ceronman@gmail.com>
 
 	* Demo.csproj: Project Updated
